Removed sun.misc usage.